Prevent window text wrapping at edge of screen
- Before, if you moved a window off the screen to the right it
  would "squish" against the side of the screen, dynamically re-wrapping
  text and making the window change size. It didn't feel like a real OS.
- Window centering also had problems because of windows changing size
  based on their position.
- Disable word wrap by default for windows.
- Leave some windows like About Paint squishy, but improve the layout.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -81,10 +81,13 @@ html, body, .jspaint {
 		display: none !important;
 	}
 }
-.window,
-.window-content {
+.window.squish,
+.window.squish .window-content {
 	max-width: 100vw;
 	max-height: 100vh;
+}
+.window:not(.squish) {
+	white-space: nowrap;
 }
 .component-area,
 .tool-window .window-titlebar {
@@ -509,7 +512,7 @@ html, body, .jspaint {
 	margin-bottom: 7px;
 }
 .edit-colors-window .luminosity-canvas {
-	margin-left: 16px/*rtl:ignore*/;
+	margin-left: 15px/*rtl:ignore*/;
 }
 .edit-colors-window .result-color-canvas {
 	margin-top: 4px;
@@ -858,6 +861,7 @@ html, body, .jspaint {
 #jspaint-project-name {
 	margin-left: 10px;
 	margin-right: 8px;
+	white-space: nowrap;
 }
 #jspaint-version {
 	/* @TODO: separate into a shared.css? (not really layout!) */
@@ -872,7 +876,7 @@ html, body, .jspaint {
 	margin: auto;
 	margin-right: 40px;
 	width: 150px;
-	height: 2.2em;
+	min-height: 2.2em;
 }
 
 #news {
