--- a/styles/layout.rtl.css
+++ b/styles/layout.rtl.css
@@ -81,10 +81,13 @@ html, body, .jspaint {
 		display: none !important;
 	}
 }
-.window,
-.window-content {
+.window.squish,
+.window.squish .window-content {
 	max-width: 100vw;
 	max-height: 100vh;
+}
+.window:not(.squish) {
+	white-space: nowrap;
 }
 .component-area,
 .tool-window .window-titlebar {
@@ -509,7 +512,7 @@ html, body, .jspaint {
 	margin-bottom: 7px;
 }
 .edit-colors-window .luminosity-canvas {
-	margin-left: 16px;
+	margin-left: 15px;
 }
 .edit-colors-window .result-color-canvas {
 	margin-top: 4px;
@@ -858,6 +861,7 @@ html, body, .jspaint {
 #jspaint-project-name {
 	margin-right: 10px;
 	margin-left: 8px;
+	white-space: nowrap;
 }
 #jspaint-version {
 	/* @TODO: separate into a shared.css? (not really layout!) */
@@ -872,7 +876,7 @@ html, body, .jspaint {
 	margin: auto;
 	margin-left: 40px;
 	width: 150px;
-	height: 2.2em;
+	min-height: 2.2em;
 }
 
 #news {
